@@ -3,6 +3,8 @@
 * Critical security bug fixed. <Nostradamus/fightingelf>
 * Bugfixes. <Nostradamus>
 * Multi database support. <Nostradamus>
+* House auction support. <Nostradamus/AzLaN>
+* Fixed OTS_Death and OTS_Kill classes <Nostradamus/AzLaN/olavo>
 
 [0.2.0+SVN]
 * Dropped 0.0.x and 0.1.x deprecations. <wrzasq>
